# server/internal/transport/http/errors/errors.go
@@ -1,0 +1,6 @@
+package http_errors
+
+type HTTPError struct {
+	Message string `json:"message"`
+	Code    int    `json:"code"`
+}
